vlib/v/checker/tests/orm_empty_struct.vv
import sqlite

struct Person {
}

fn main() {
	db := sqlite.connect(':memory:')?
	res := sql db {
		select from Person
	}
    println(res)
}